--- a/WohnungSuchen/Views/ProvidersCollectionViewCell.xib
+++ b/WohnungSuchen/Views/ProvidersCollectionViewCell.xib
@@ -17,10 +17,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zrh-lI-zvI">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zrh-lI-zvI" customClass="CustomButton" customModule="WohnungSuchen" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
                     </button>
                 </subviews>
             </view>
