--- a/WohnungSuchen/Views/ProvidersCollectionViewCell.xib
+++ b/WohnungSuchen/Views/ProvidersCollectionViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zrh-lI-zvI" customClass="CustomButton" customModule="WohnungSuchen" customModuleProvider="target">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zrh-lI-zvI" customClass="SaveButton" customModule="WohnungSuchen" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="Button"/>
@@ -38,4 +38,9 @@
             <point key="canvasLocation" x="177.09923664122135" y="13.380281690140846"/>
         </collectionViewCell>
     </objects>
+    <designables>
+        <designable name="Zrh-lI-zvI">
+            <size key="intrinsicContentSize" width="46" height="30"/>
+        </designable>
+    </designables>
 </document>
