Extract statusLabel to separate class with update method if error occurred or not

--- a/WohnungSuchen/Views/Base.lproj/Main.storyboard
+++ b/WohnungSuchen/Views/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="baK-Zu-6OY">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="baK-Zu-6OY" customClass="StatusLabel" customModule="WohnungSuchen" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="59" width="393" height="0.0"/>
                                 <color key="backgroundColor" name="brandOlive"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
