--- a/WohnungSuchen/Views/ProvidersCollectionViewCell.xib
+++ b/WohnungSuchen/Views/ProvidersCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,6 +20,7 @@
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zrh-lI-zvI" customClass="SaveButton" customModule="WohnungSuchen" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                        <color key="tintColor" name="brandGray"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="Button"/>
                     </button>
@@ -40,7 +42,12 @@
     </objects>
     <designables>
         <designable name="Zrh-lI-zvI">
-            <size key="intrinsicContentSize" width="46" height="30"/>
+            <size key="intrinsicContentSize" width="100" height="100"/>
         </designable>
     </designables>
+    <resources>
+        <namedColor name="brandGray">
+            <color red="0.8784313725490196" green="0.8901960784313725" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
